Remove deprecated WordEntropy cache path and dead code
- Remove useMatrix flag and all legacy cache-based branches (DEP-01)
- Delete deprecated response cache methods: getResponseCacheSize,
  clearResponseCache, getEstimatedCacheMemoryBytes (DEP-02/03/04)
- Delete precomputeWithCache() (DEP-05)
- Delete getResponseBucketsFromMatrix() (DEP-06)
- Remove static responseCache ConcurrentHashMap field (DEP-07)
- Replace computeResponseBuckets() with ResponseMatrix-based
  implementation; add WordGame fallback for cross-dictionary guesses
  (Bellman full-dictionary case) (DEP-08)
- Delete legacy helper methods: calculateDictionaryReductionFromBuckets,
  calculateColumnLengthFromBuckets, calculateColumnLengthForWords (DEP-09)
- Delete WordPairKey class (DEP-10)
- Remove @see WordPairKey from ResponsePattern Javadoc (DEP-11)
- Delete ResponseCacheTest; replace with ResponsePatternTest (9 tests) (DEP-12)
- Add missing security exception classes: ResourceNotFoundException,
  DuplicateResourceException, InvalidOperationException
- Fix UserService: extract USER_NOT_FOUND constant, use Stream.toList(),
  add @NonNull annotations on Long/Pageable parameters
- Add docs: coding-standards-findings.md, deprecated-code-removal-plan.md

All 288 tests passing.